v0.6.149: Reduce filesystem table column min-widths to fix overflow

--- a/server/static/styles.css
+++ b/server/static/styles.css
@@ -3235,37 +3235,37 @@ body[data-theme="dark"] .btn-danger-outline:hover:not(:disabled) {
 }
 
 .fs-table .fs-col-mountpoint {
-  width: 20%;
-  min-width: 190px;
+  width: 16%;
+  min-width: 140px;
 }
 
 .fs-table .fs-col-filesystem {
-  width: 21%;
-  min-width: 210px;
+  width: 13%;
+  min-width: 115px;
 }
 
 .fs-table .fs-col-type {
-  width: 8%;
-  min-width: 70px;
+  width: 6%;
+  min-width: 50px;
 }
 
 .fs-table .fs-col-size {
-  width: 11%;
-  min-width: 120px;
+  width: 10%;
+  min-width: 95px;
 }
 
 .fs-table .fs-col-usage {
-  width: 18%;
-  min-width: 180px;
+  width: 17%;
+  min-width: 155px;
 }
 
 .fs-bar-cell {
-  min-width: 170px;
+  min-width: 150px;
 }
 
 .fs-bar-wrap {
   display: inline-block;
-  width: 135px;
+  width: 110px;
   height: 8px;
   background: #e2e8f0;
   border-radius: 4px;
